--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
     <section>
       <div class="p-4 container mt-5 mb-5 bg-secondary">
 
-        <form action="forms/contact.php" method="post">
+        <form action="" method="post">
           <div class="row mt-3">
             <div class="col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -161,9 +161,6 @@
             <div class="col-md-6 form-group mt-3 mt-md-0">
               <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
             </div>
-          </div>
-          <div class="form-group mt-3">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
           </div>
           <div class="form-group mt-3 mb-3">
             <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
