--- a/past_events.html
+++ b/past_events.html
@@ -13,10 +13,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&&family=Raleway:wght@400;600;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 
 
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-md text-nowrap" aria-label="Barra de Navegación">
       <div class="container-fluid ">
         <div class="col-3 col-md-5 col-lg-6 col-xl-7">
-          <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt="Logo" width="150"></a>
+          <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt="Logo" width="150"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
           aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
@@ -158,7 +158,7 @@
       <div class="card-deck d-flex flex-wrap gap-3 justify-content-center mb-3">
 
         <div class="card bg-success">
-          <img alt="cinema" src="../assets/img/cinema.jpg" class="card-img-top" id="inlineCheckbox1">
+          <img alt="cinema" src="./assets/img/cinema.jpg" class="card-img-top" id="inlineCheckbox1">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the
@@ -168,7 +168,7 @@
           </div>
         </div>
         <div class="card bg-success">
-          <img src="../assets/img/museum_tour.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/museum_tour.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="card bg-success">
-          <img src="../assets/img/music_concert.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/music_concert.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-black">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make
@@ -188,7 +188,7 @@
           </div>
         </div>
         <div class="card bg-success">
-          <img src="../assets/img/costume_party.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/costume_party.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and
@@ -198,7 +198,7 @@
           </div>
         </div>
         <div class="card bg-success">
-          <img src="../assets/img/food_fair.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/food_fair.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and
