--- a/stats.html
+++ b/stats.html
@@ -13,11 +13,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&&family=Raleway:wght@400;600;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/styles/style.css">
-  <link rel="stylesheet" href="/styles/bootstrap-icons.css">
+  <link rel="stylesheet" href="./styles/style.css">
 
-
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -28,7 +26,7 @@
     <nav class="navbar navbar-expand-md text-nowrap" aria-label="Barra de Navegación">
       <div class="container-fluid ">
         <div class="col-3 col-md-5 col-lg-6 col-xl-7">
-          <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt="Logo" width="150"></a>
+          <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt="Logo" width="150"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
           aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
