--- a/index.html
+++ b/index.html
@@ -100,60 +100,32 @@
     <div class="m-3">
 
 
-      <form role="search">
-        <div class="container-fluid d-lg-inline-flex  justify-content-lg-between align-items-center">
-          <div class="category col-lg-6">
-            <div class="form-group">
+      <form action="" role="search">
+        <div class="container-fluid d-lg-inline-flex  justify-content-lg-around align-items-center">
+          <div class="category col-lg-5">
+            <div class="checkboxCat form-group">
 
-              <input class="form-check-input" type="checkbox" value="1" id="category1">
-              <label class="me-3 form-label" for="category1">
-                Category
-              </label>
-
-
-              <input class="form-check-input" type="checkbox" value="2" id="category2">
-              <label class="me-3 form-label" for="category2">
-                Category
-              </label>
-
-
-              <input class="form-check-input" type="checkbox" value="3" id="category3">
-              <label class="me-3 form-label" for="category3">
-                Category
-              </label>
-
-
-              <input class="form-check-input" type="checkbox" value="4" id="category4">
-              <label class="me-3 form-label" for="category4">
-                Category
-              </label>
-
-
-              <input class="form-check-input" type="checkbox" value="5" id="category5">
-              <label class="me-3 form-label" for="category5">
-                Category
-              </label>
             </div>
           </div>
           <div class="category col-lg-5">
             <div class="d-flex form-group">
 
-              <input class="form-control  me-2" type="search" placeholder="Search" aria-label="Search">
+              <input id="inputSearch" class="form-control  me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-secondary" type="submit">
                 <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path
                     d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
                 </svg>
               </button>
-
             </div>
           </div>
         </div>
       </form>
+      <div class="text-center container" id="success"></div>
     </div>
 
     <section>
-      <div class="card-contentido card-deck d-flex flex-wrap gap-3 justify-content-center mb-3">
+      <div class="card-contenido card-deck d-flex flex-wrap gap-3 justify-content-center mb-3">
 
 
       </div>
@@ -187,6 +159,8 @@
   <!-- End Footer -->
   <script src="./assets/js/data.js"></script>
   <script src="./assets/js/index_data.js"></script>
+  <script src="./assets/js/categ_search.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
