--- a/past_events.html
+++ b/past_events.html
@@ -83,44 +83,17 @@
 
 
       <form role="search">
-        <div class="container-fluid d-lg-inline-flex  justify-content-lg-between align-items-center">
-          <div class="category col-lg-6">
-            <div class="form-group">
-
-              <input class="form-check-input" type="checkbox" value="1" id="category1">
-              <label class="me-3 form-label" for="category1">
-                Category
-              </label>
+        <div class="container-fluid d-lg-inline-flex  justify-content-lg-around align-items-center">
+          <div class="category col-lg-5">
+            <div class="checkboxCat form-group">
 
 
-              <input class="form-check-input" type="checkbox" value="2" id="category2">
-              <label class="me-3 form-label" for="category2">
-                Category
-              </label>
-
-
-              <input class="form-check-input" type="checkbox" value="3" id="category3">
-              <label class="me-3 form-label" for="category3">
-                Category
-              </label>
-
-
-              <input class="form-check-input" type="checkbox" value="4" id="category4">
-              <label class="me-3 form-label" for="category4">
-                Category
-              </label>
-
-
-              <input class="form-check-input" type="checkbox" value="5" id="category5">
-              <label class="me-3 form-label" for="category5">
-                Category
-              </label>
             </div>
           </div>
           <div class="category col-lg-5">
             <div class="d-flex form-group">
 
-              <input class="form-control  me-2" type="search" placeholder="Search" aria-label="Search">
+              <input id="inputSearch" class="form-control  me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-secondary" type="submit">
                 <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path
@@ -132,6 +105,8 @@
           </div>
         </div>
       </form>
+      <div class="text-center container" id="success"></div>
+
     </div>
 
     <section>
@@ -168,7 +143,7 @@
   </footer><!-- End Footer -->
   <script src="./assets/js/data.js"></script>
   <script src="./assets/js/past_data.js"></script>
-
+  <script src="./assets/js/categ_search.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
