--- a/details.html
+++ b/details.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-md text-nowrap" aria-label="Barra de Navegación">
       <div class="container-fluid ">
         <div class="col-3 col-md-5 col-lg-6 col-xl-7">
-          <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt="Logo" width="150"></a>
+          <a class="navbar-brand" href="./index.html"><img src="../assets/img/logo.png" alt="Logo" width="150"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
           aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,6 +97,7 @@
   <main class="container-fluid mt-5">
 
     <section>
+
       <div class="card-contenido w-100 card-deck d-flex flex-wrap gap-3 justify-content-center mb-3">
 
       </div>
@@ -127,10 +128,9 @@
       </div>
     </div>
   </footer><!-- End Footer -->
-  <script src="./assets/js/data.js"></script>
+  <script src="./assets/js/amazing.json"></script>
   <script src="./assets/js/detail_data.js"></script>
 
-  <script src="./assets/js/categ_search.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
