--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&&family=Raleway:wght@400;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;900&&family=Raleway:wght@400;600;700;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./styles/style.css">
 
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-md text-nowrap" aria-label="Barra de Navegación">
       <div class="container-fluid ">
         <div class="col-3 col-md-5 col-lg-6 col-xl-7">
-          <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt="Logo" width="150"></a>
+          <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt="Logo" width="150"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
           aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
         <div class="col-auto collapse navbar-collapse" id="navbarsExample03">
           <ul class="navbar-nav me-auto mb-2 mb-sm-0 ">
             <li class="nav-item m-lg-2">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item m-lg-2">
               <a class="nav-link" href="./upcoming_events.html">Upcoming Events</a>
@@ -124,7 +124,7 @@
       <div class="text-center container" id="success"></div>
     </div>
 
-    <section>
+    <section class="cards">
       <div class="card-contenido card-deck d-flex flex-wrap gap-3 justify-content-center mb-3">
 
 
@@ -157,9 +157,9 @@
     </div>
   </footer>
   <!-- End Footer -->
-  <script src="./assets/js/data.js"></script>
-  <script src="./assets/js/index_data.js"></script>
-  <script src="./assets/js/categ_search.js"></script>
+  <script src="./assets/js/amazing.json"></script>
+  <script src="./assets/js/functions.js"></script>
+  <!-- <script src="./assets/js/categ_search.js"></script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
