--- a/stats.html
+++ b/stats.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-md text-nowrap" aria-label="Barra de Navegación">
       <div class="container-fluid ">
         <div class="col-3 col-md-5 col-lg-6 col-xl-7">
-          <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt="Logo" width="150"></a>
+          <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt="Logo" width="150"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
           aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,104 +79,53 @@
   </section>
 
   <main class="container-fluid mt-4">
-    <table>
-      <thead>
-        <tr>
-          <th colspan="3">Events Stadistics</th>
-        </tr>
-        <tr>
-          <th>Events whit highest percentage of attendence</th>
-          <th>Events whit lowest percentage of attendence</th>
-          <th>Event whit larger capacity</th>
+    <div id="tablas">
+      <table class="table table-responsive">
+        <thead>
+          <tr>
+            <th colspan="3">Events statistics</th>
+          </tr>
+        </thead>
+        <tbody id="hightest_events">
+          <tr class="titulos">
+            <td>Events with highest percentage of attendance</td>
+            <td>Events with lowest percentage of attendance</td>
+            <td>Event with larger capacity</td>
+          </tr>
 
 
-        </tr>
-      </thead>
-      <TBody>
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
+        </tbody>
+      </table>
 
-        </tr>
-        <tr>
+      <table class="table table-responsive">
+        <thead>
+          <tr>
 
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
+            <th colspan="3">Upcoming events statistics by category</th>
+          </tr>
+        </thead>
+        <tbody id="upcoming">
+
+        </tbody>
+      </table>
+
+      <table class="table table-responsive">
+        <thead>
+          <tr>
+
+            <th colspan="3">Past events statistics by category</th>
+
+          </tr>
+        </thead>
+        <tbody id="past">
 
 
-        <tr>
-          <th colspan="3">Upcoming events stadistics by categories</th>
-        </tr>
-        <tr>
-          <th>Categories</th>
-          <th>Revenues</th>
-          <th>Porcetange of attendence</th>
+        </tbody>
+      </table>
 
 
-        </tr>
 
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-
-        </tr>
-        <tr>
-
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-          <th colspan="3">Past events stadistic by categorie</th>
-        </tr>
-        <tr>
-          <th>Categories</th>
-          <th>Revenues</th>
-          <th>Porcetange of attendence</th>
-        </tr>
-
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-
-        </tr>
-        <tr>
-
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-      </TBody>
-    </table>
+    </div>
   </main>
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -204,8 +153,9 @@
     </div>
   </footer><!-- End Footer -->
 
-  <script src="./assets/js/data.js"></script>
-  <script src="./assets/js/categ_search.js"></script>
+  <script src="./assets/js/amazing.json"></script>
+  <script src="./assets/js/stats_data.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
