correctiones finales varias

--- a/stats.html
+++ b/stats.html
@@ -148,7 +148,7 @@
             </svg></i></a>
       </div>
       <div class="copyright text-black">
-        &copy; Copyright <strong><span>Cohort</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Cohort 14</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
