--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <div class="col-auto collapse navbar-collapse" id="navbarsExample03">
           <ul class="navbar-nav me-auto mb-2 mb-sm-0 ">
             <li class="nav-item m-lg-2">
-              <a class="nav-link " href="./details.html">Home</a>
+              <a class="nav-link " href="./index.html">Home</a>
             </li>
             <li class="nav-item m-lg-2">
               <a class="nav-link" href="./upcoming_events.html">Upcoming Events</a>
