--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;900&&family=Raleway:wght@400;600;700;900&display=swap"
     rel="stylesheet">
+
   <link rel="stylesheet" href="./styles/style.css">
 
 
@@ -95,22 +96,27 @@
     </div>
     <div class="waves"></div>
   </section>
-  <main class="container-fluid">
-
+  <main id="render-pagina" class="container-fluid">
     <div class="m-3">
 
 
       <form action="" role="search">
-        <div class="container-fluid d-lg-inline-flex  justify-content-lg-around align-items-center">
-          <div class="category col-lg-5">
-            <div class="checkboxCat form-group">
+        <div class="container-fluid d-lg-inline-flex justify-content-lg-between align-items-center">
+          <div class="category col-lg-7">
+            <div class="checkboxCat form-group form-switch2">
+              <template v-for="(category,i) of compCatego" :key="i">
 
+                <input class="me-1 form-check-input" :value="category" type="checkbox" name="" :id="category"
+                  role="switch" v-on:change="filtros" v-model="checked">
+                <label class="me-2 form-label" :for="category" v-text="category"></label>
+              </template>
             </div>
           </div>
           <div class="category col-lg-5">
-            <div class="d-flex form-group">
+            <div class="d-flex justify-content form-group">
 
-              <input id="inputSearch" class="form-control  me-2" type="search" placeholder="Search" aria-label="Search">
+              <input id="inputSearch" class="form-control  me-2" type="search" placeholder="Search" aria-label="Search"
+                v-on:keyup="filtros" v-model="valueSearch">
               <button class="btn btn-outline-secondary" type="submit">
                 <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path
@@ -121,13 +127,40 @@
           </div>
         </div>
       </form>
-      <div class="text-center container" id="success"></div>
+      <div class="text-center container" id="success" v-html="mensaje"></div>
     </div>
-
     <section class="cards">
+
       <div class="card-contenido card-deck d-flex flex-wrap gap-3 justify-content-center mb-3">
 
+        <div v-if="!loading" style="margin-top:2rem;text-align:center;height: 40vw;"><img src="./assets/img/spinner.svg"
+            width="100"></div>
 
+
+        <template v-if="filtros().length" v-for="item in filtros()" :key="item._id">
+          <div class="card bg-success">
+            <img :alt="item.name" :src="item.image">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">{{item.name}}</h5>
+              <p class="card-text">{{item.description}}</p>
+              <div class="mt-auto fill-space">
+                <div class="d-flex align-items-center justify-content-between mx-0">
+                  <p class="card-precio">
+                    <slot>Price: $</slot>{{item.price}}
+                  </p>
+                  <p><a alt="Detail" :href="'./details.html?id='+ item._id" class="btn btn-secondary hover">Datails</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </template>
+        <div style="margin-top:2rem;text-align:center;height: 20vw;" v-else>
+
+          <h5 v-if="loading" v-text="textoNoencontrado"></h5>
+          <p class="card-text" v-if="loading" v-text="textoAjuste"></p>
+
+        </div>
       </div>
     </section>
   </main>
@@ -157,10 +190,13 @@
     </div>
   </footer>
   <!-- End Footer -->
-  <script src="./assets/js/amazing.json"></script>
-  <script src="./assets/js/functions.js"></script>
-  <!-- <script src="./assets/js/categ_search.js"></script> -->
 
+  <!-- <script src="https://unpkg.com/vue@3"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
+
+  <script src="./assets/js/amazing.json"></script>
+  <script type="module" src="./assets/js/functions.js"></script>
+  <!-- <script src="./assets/js/categ_search.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
