--- a/past_events.html
+++ b/past_events.html
@@ -77,41 +77,75 @@
     </div>
     <div class="waves"></div>
   </section>
-  <main class="container-fluid">
-
+  <main id="render-pagina" class="container-fluid">
     <div class="m-3">
 
 
-      <form role="search">
-        <div class="container-fluid d-lg-inline-flex  justify-content-lg-around align-items-center">
-          <div class="category col-lg-5">
-            <div class="checkboxCat form-group">
+      <form action="" role="search">
+        <div class="container-fluid d-lg-inline-flex  justify-content-lg-between align-items-center">
+          <div class="category col-lg-7">
+            <!-- <categorias :catego="categories" :datos="checked" :filtro="filtros"></categorias> -->
+            <div class="checkboxCat2 form-group form-switch2">
+              <template v-for="(category,i) of compCatego" :key="i">
 
-
+                <input class="me-1 form-check-input" :value="category" type="checkbox" name="" :id="category"
+                  role="switch" v-on:change="filtros" v-model="checked">
+                <label class="me-2 form-label" :for="category" v-text="category"></label>
+              </template>
             </div>
           </div>
           <div class="category col-lg-5">
             <div class="d-flex form-group">
 
-              <input id="inputSearch" class="form-control  me-2" type="search" placeholder="Search" aria-label="Search">
+              <input id="inputSearch" class="form-control  me-2" type="search" placeholder="Search" aria-label="Search"
+                v-on:keyup="filtros" v-model="valueSearch">
               <button class="btn btn-outline-secondary" type="submit">
                 <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path
                     d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
                 </svg>
               </button>
-
             </div>
           </div>
         </div>
       </form>
-      <div class="text-center container" id="success"></div>
-
+      <div class="text-center container" id="success" v-html="mensaje"></div>
     </div>
+    <section class="cards">
 
-    <section>
-      <div class="card-contenido align-content-end d-flex flex-wrap gap-3 justify-content-center mb-3">
+      <div class="card-contenido card-deck d-flex flex-wrap gap-3 justify-content-center mb-3">
 
+        <div v-if="!loading" style="margin-top:2rem;text-align:center;height: 40vw;"><img src="./assets/img/spinner.svg"
+            width="100"></div>
+
+
+        <template v-if="filtros().length" v-for="item in filtros()" :key="item._id">
+          <div class="card bg-success">
+            <img :alt="item.name" :src="item.image">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">{{item.name}}</h5>
+              <p class="card-text">{{item.description}}</p>
+              <div class="mt-auto fill-space">
+                <div class="d-flex align-items-center justify-content-between mx-0">
+                  <p class="card-precio">
+                    <slot>Price: $</slot>{{item.price}}
+                  </p>
+                  <p><a alt="Detail" :href="'./details.html?id='+ item._id" class="btn btn-secondary hover">Datails</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </template>
+        <div style="margin-top:2rem;text-align:center;height: 20vw;" v-else>
+
+          <h5 v-if="loading" v-text="textoNoencontrado"></h5>
+          <p class="card-text" v-if="loading" v-text="textoAjuste"></p>
+
+        </div>
+
+        <!-- <tarjetas v-for="item in event" :evento="item" :key="item._id"></tarjetas>
+             -->
 
       </div>
     </section>
@@ -142,7 +176,7 @@
     </div>
   </footer><!-- End Footer -->
   <script src="./assets/js/amazing.json"></script>
-  <script src="./assets/js/functions.js"></script>
+  <script type="module" src="./assets/js/functions.js"></script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
