correcciones en css

--- a/details.html
+++ b/details.html
@@ -114,7 +114,7 @@
                 <p class="card-text"><strong>Place:</strong> <span v-text="filteredEvents.place"></span></p>
                 <p class="card-text"><strong>Date:</strong> <span v-text="filteredEvents.date"></span></p>
                 <p class="card-precio"><strong>Price:</strong> $<span v-text="filteredEvents.price"></span></p>
-                <a alt="Go Back" onclick="history.back()" href="#" class="btn btn-secondary hover">Go Back</a>
+                <a alt="Go Back" onclick="history.back()" href="#" class="btn btn-custom hover">Go Back</a>
 
               </div>
             </div>
