correcciones en css 2

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
         </div>
       </form>
     </div>
-    <div class="mb-2 text-center container" id="success" v-html="mensaje"></div>
+    <div class=" mb-2 text-center container" id="success">
+      <span v-html="mensaje"></span>
+    </div>
 
     <section class="cards">
 
