correcciones en css 5

--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -132,7 +132,7 @@
                   <p class="card-precio">
                     <slot>Price: $</slot>{{item.price}}
                   </p>
-                  <p><a alt="Detail" :href="'./details.html?id='+ item._id" class="btn btn-secondary hover">Datails</a>
+                  <p><a alt="Detail" :href="'./details.html?id='+ item._id" class="btn btn-custom hover">Datails</a>
                   </p>
                 </div>
               </div>
