--- a/details.html
+++ b/details.html
@@ -6,12 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Details</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&&family=Raleway:wght@400;600;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
 
@@ -24,7 +19,7 @@
     <nav class="navbar navbar-expand-md text-nowrap" aria-label="Barra de Navegación">
       <div class="container-fluid ">
         <div class="col-3 col-md-5 col-lg-6 col-xl-7">
-          <a class="navbar-brand" href="./index.html"><img src="../assets/img/logo.png" alt="Logo" width="150"></a>
+          <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt="Logo" width="150"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
           aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
