agregado de funcionalidades adicionales

--- a/stats.html
+++ b/stats.html
@@ -104,24 +104,31 @@
         </tbody>
       </table>
 
-      <table class="table table-responsive">
+      <table id="t1" @click="sortCol($event.target,'upcoming')" class="table table-responsive">
         <thead>
           <tr>
-
             <th colspan="3">Upcoming events statistics by category</th>
+          </tr>
+          <tr class="titulos">
+            <th>Categories <i data-orden="1" data-type="string" data-cell="0" class="bi bi-caret-up-fill flechas"></i>
+
+              <i class="bi bi-caret-down-fill flechas" data-orden="-1" data-type="string" data-cell="0"></i>
+            </th>
+            <th>Revenues in USD <i data-orden="1" data-type="number" data-cell="1"
+                class="bi bi-caret-up-fill flechas"></i><i class="bi bi-caret-down-fill flechas" data-orden="-1"
+                data-type="number" data-cell="1"></i>
+            </th>
+            <th>Percentage of attendance <i data-orden="1" data-type="string" data-cell="2"
+                class="bi bi-caret-up-fill flechas"></i><i class="bi bi-caret-down-fill flechas" data-orden="-1"
+                data-type="string" data-cell="2"></i></th>
           </tr>
         </thead>
         <tbody id="upcoming">
-          <tr class="titulos">
-            <td>Categories</td>
-            <td>Revenues</td>
-            <td>Percentage of attendance</td>
-          </tr>
+
           <template v-for="(category,i) of categFuturos" :key="i">
             <tr>
               <td>{{category.name}}</td>
-              <td>
-                <slot>$</slot>{{category.total}}
+              <td>{{category.total}}
               </td>
               <td>{{(
                 (category.asistenciaTotal * 100) /
@@ -133,25 +140,31 @@
         </tbody>
       </table>
 
-      <table class="table table-responsive">
+      <table @click="sortCol($event.target,'past')" class="table table-responsive">
         <thead>
           <tr>
-
             <th colspan="3">Past events statistics by category</th>
+          </tr>
+          <tr class="titulos">
+            <th>Categories <i data-orden="1" data-type="string" data-cell="0" class="bi bi-caret-up-fill flechas"></i>
 
+              <i class="bi bi-caret-down-fill flechas" data-orden="-1" data-type="string" data-cell="0"></i>
+            </th>
+            <th>Revenues in USD <i data-orden="1" data-type="number" data-cell="1"
+                class="bi bi-caret-up-fill flechas"></i><i class="bi bi-caret-down-fill flechas" data-orden="-1"
+                data-type="number" data-cell="1"></i>
+            </th>
+            <th>Percentage of attendance <i data-orden="-1" data-type="string" data-cell="2"
+                class="bi bi-caret-up-fill flechas"></i><i class="bi bi-caret-down-fill flechas" data-orden="1"
+                data-type="string" data-cell="2"></i></th>
           </tr>
         </thead>
         <tbody id="past">
-          <tr class="titulos">
-            <td>Categories</td>
-            <td>Revenues</td>
-            <td>Percentage of attendance</td>
-          </tr>
           <template v-for="(category,i) of categPasados" :key="i">
             <tr>
               <td>{{category.name}}</td>
               <td>
-                <slot>$</slot>{{category.total}}
+                {{category.total}}
               </td>
               <td>{{(
                 (category.asistenciaTotal * 100) /
